--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 body{
 
 
-   background-color: black;
+   background-color: white;
 
 }
 
@@ -166,7 +166,7 @@ label{
 
 <header id="status"  onclick="javascript:myFunction();">
 
-<h2>Tyrese Trading Consistency Calculator</h2>
+<h2>Trading Consistency Calculator</h2>
 
 </header id="statyus">
 
